[project]
name = "pocketflow-template-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-debug @ file:./agent-debug",
    "debugpy>=1.8.14",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "openai>=1.0.0",
    "pillow>=9.0.0",
    "pocketflow>=0.0.1",
    "pyautogen>=0.2.20",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "pyvespa>=0.41.0",
    "pyyaml>=6.0",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
include = ["utils*", "agent_debug*"]
